@@ -1,3 +1,10 @@
+Thu Feb  5 16:03:59 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
+        * ciao/ComponentServer/CIAO_Container_Impl.cpp:
+        
+          First cut implementation of unhomed component deployment.  Untested as yet. 
+        
 Thu Feb  5 14:40:18 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
@@ -7,9 +14,9 @@ Thu Feb  5 14:40:18 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
         * DAnCE/tests/CIAO/ExecutionManager-Deployments/SimplexConnectionExplicitHome_NS.cdp:
         * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
         * tools/Config_Handlers/ERE_Handler.cpp:
-        
-          Fixes to enable external reference connections for non-provider connections. 
-        
+
+          Fixes to enable external reference connections for non-provider connections.
+
 Thu Feb  5 00:39:48 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/tests/CIAO/Components/SimpleConsumer_exec.cpp:
